# rstb-rust

./: Cargo.toml  README.md
data/: switch.json  wiiu.json
src/: bin.rs  botw.rs  calc.rs  json.rs  lib.rs  str.rs
src/calc/: guess.rs  info.rs  mod.rs
src/calc/cpp_memsizes/: baiprog.rs  baslist.rs  bdrop.rs  bgparamlist.rs  bmodellist.rs  bphysics.rs  brecipe.rs  bshop.rs  bxml.rs  mod.rs
src/calc/cpp_memsizes/cpp_classes/: AIProgram.rs  ASList.rs  ActorLink.rs  DropTable.rs  GParamList.rs  ModelList.rs  Physics.rs  Recipe.rs  ShopData.rs  agl.rs  mod.rs  sead.rs
src/calc/cpp_memsizes/cpp_classes/nx/: ASList.rs  agl.rs  mod.rs
src/calc/cpp_memsizes/cpp_classes/wiiu/: agl.rs  mod.rs
test/: A-1_Dynamic.smubin  AirOcta_Tag.sbactorpack  Armor_001_Upper.bmodellist  Armor_002_Upper.brecipe  DgnMrgPrt_Dungeon061.sbfres  Dummy.bgparamlist  Enemy_Bokoblin_Gold.bdmgparam  FldObj_TreeRootTropical_A_Far.sbfres  Npc_TripMaster_08.bshop  Obj_TreeWhiteBirch_A_01.hkrb  Player_Link.bgparamlist  Player_Link.bphysics  ResourceSizeTable.product.rsizetable
