[package]
name = "rstb"
version = "0.6.0"
description = "Rust library for manipulating Breath of the Wild's resource size table"
documentation = "https://docs.rs/rstb"
repository = "https://github.com/NiceneNerd/rstb-rust"
readme = "README.md"
keywords = ["Nintendo", "rstb", "Zelda", "botw", "gamedev"]
categories = ["parsing", "game-development"]
license = "MIT"
authors = ["Caleb Smith <macadamiadaze@gmail.com>"]
edition = "2021"
exclude = ["/test"]

[package.metadata.docs.rs]
features = ["json", "botw-data", "yaz0", "complex", "complex_testing"]

[dependencies]
crc = "2.1.0"
include-flate = { version = "0.2.0", optional = true }
glob = { version = "0.3.0", optional = true }
phf = { version = "0.11", features = ["macros"], optional = true }
roead = { version = "0.20.0", features = ["aamp", "yaz0", "sarc"], optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true}
thiserror = "1"
yaz0 = { version = "0.3.0", optional = true }

[dev-dependencies]
all_asserts = "2.3.0"

[features]
json = ["serde", "serde_json"]
botw-data = ["include-flate", "json"]
complex = ["roead", "phf"]
complex_testing = ["roead", "glob"]
