[package]
name = "rstb"
version = "1.0.0"
description = "Rust library for manipulating Breath of the Wild's resource size table"
documentation = "https://docs.rs/rstb"
repository = "https://github.com/NiceneNerd/rstb-rust"
readme = "README.md"
keywords = ["Nintendo", "rstb", "Zelda", "botw", "gamedev"]
categories = ["parsing", "game-development"]
license = "MIT"
authors = ["Caleb Smith <c.smith@tuta.io>"]
edition = "2021"
rust-version = "1.80"
exclude = ["/test"]

[package.metadata.docs.rs]
features = ["json", "botw-data", "yaz0", "complex", "complex_testing"]

[dependencies]
crc = "3.2"
dirs2 = { version = "3", optional = true }
include-flate = { version = "0.3.0", optional = true }
glob = { version = "0.3.0", optional = true }
phf = { version = "0.11", features = ["macros"], optional = true }
roead = { version = "0.25.3", features = [
    "aamp",
    "yaz0",
    "sarc",
], optional = true }
ryml = { version = "0.3.2", features = ["std"], optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "1"
yaz0 = { version = "0.3.0", optional = true }

[dev-dependencies]
all_asserts = "2.3.0"

[features]
json = ["serde", "serde_json"]
botw-data = ["include-flate", "json"]
complex = ["roead", "phf"]
complex_testing = ["roead", "glob", "dirs2", "ryml"]
